--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     <div class="dropdownmenu1"> 
                       <ul>
                         <li><a href>Certificate in formulating organic..</a></li>
-                        <li><a href> Certificate organic hair care pro..</a></li>
+                        <li><a href="certinhair.html"> Certificate organic hair care pro..</a></li>
                         <li><a href>Beginners soap making course</a></li>
                   
                       </ul>
