--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                   <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
-                        <li><a href>Certificate in formulating organic..</a></li>
-                        <li><a href> Certificate organic hair care pro..</a></li>
+                        <li><a href="">Certificate in formulating organic..</a></li>
+                        <li><a href="certinhair.html"> Certificate organic hair care pro..</a></li>
                         <li><a href>Beginners soap making course</a></li>
                   
                       </ul>
