--- a/certinskin.html
+++ b/certinskin.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Certificate in hairSerum</title>
+    <title>Certificate in organic skincare</title>
     <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="stylesheet" href="./css/certinhair.css"/>
-
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
       rel="stylesheet"
@@ -120,16 +119,16 @@
           </div>
     </header>
     <div class="cert-title">
-      <h1>Certificate in formulating hair serum
+      <h1>Certificate in formulating organic skincare</h1>
       </h1>
-      <p><a href="index.html">Home > </a><a href="course.html">Courses > </a><a href="certinhair.html"> certificate in formulating hair serum</a></p>
+      <p><a href="index.html">Home > </a><a href="course.html">Courses > </a><a href="certinskin.html"> certificate in formulating hair serum</a></p>
 
     </div>
     <div class="theCourse">
-      <div class="courseimg"><img src="img/course-2.jpg">
+      <div class="courseimg"><img src="img/course-1.jpg">
       </div>
       <div>
-      <p class="flexible"><span>All our courses are flexible and come with our unique support system.</span>
+        <p class="flexible"><span>All our courses are flexible and come with our unique support system.</span>
 
       </p>
       <h4>FLEXIBILE</h4>
@@ -154,13 +153,13 @@
     </div>
     </div>
     <div class="othercoursepointer">
-      <div>
-        <a href="certinskin.html"><i class="fa fa-arrow-circle-left"></i>Certificate in organic skincare</a>
+        <div>
+          <a href="certinskin.html"><i class="fa fa-arrow-circle-left"></i>Certificate in Hair product</a>
+        </div>
+        <div>
+          <a href="beginner.html">Beginners in soap making<i class="fa fa-arrow-circle-right"></i></a>
+        </div>
       </div>
-      <div>
-        <a href="beginner.html"></i>Beginners in soap making <i class="fa fa-arrow-circle-right"></i></a>
-      </div>
-    </div>
   </main>
   <div class="footer-container res-pad">
     <div class="footer-about">
