reference link updated

--- a/about.html
+++ b/about.html
@@ -62,9 +62,9 @@
                   <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
-                        <li><a href>Certificate in formulating organic..</a></li>
+                        <li><a href="certinskin.html">Certificate in formulating organic..</a></li>
                         <li><a href="certinhair.html"> Certificate organic hair care pro..</a></li>
-                        <li><a href>Beginners soap making course</a></li>
+                        <li><a href="beginner.html">Beginners soap making course</a></li>
                   
                       </ul>
 
