--- a/certinhair.html
+++ b/certinhair.html
@@ -165,16 +165,16 @@
   <div class="footer-container res-pad">
     <div class="footer-about">
       <P><a href="index.html">HOME</a></P>
-      <P><a href="#">ALL COURSES</a></P>
+      <P><a href="course.html">ALL COURSES</a></P>
       <P><a href="#">OUR BLOG</a></P>
-      <P><a href="#">START HERE</a></P>
+      <P><a href="index.html">START HERE</a></P>
       
       
     </div>
     <div class="footer-course">
       <p><a href="#"> STUDENT LOGIN</a></p>
-      <p><a href="#"> ABOUT US</a></p>
-      <p><a href="#"> CONTACT US</a></p>
+      <p><a href="about.html"> ABOUT US</a></p>
+      <p><a href="contact.html"> CONTACT US</a></p>
       <P><a href="#">STAFF MAIL</a></P>
     </div>
     <div class="contact-address">
