--- a/index.html
+++ b/index.html
@@ -116,10 +116,13 @@
         </div>
 
       </header>
+
   
       <div class="welcome res-pad">
         <h2>Welcome to Skin Essence School!</h2>
-        <div class="center-content">
+
+        <div class="center-contentAndvideo">
+          <div clas="welcomenote">
           <p>
             We’re here to help you create high-performance, natural and organic
             beauty products, for your personal use, or to go further and launch
@@ -137,6 +140,11 @@
             We are prepared to help you create effective, ethical and natural
             products that will set you apart in the organic skincare industry.
           </p>
+        </div>
+        <div class="welcomevideo">
+          <iframe width="420" height="345" src="https://youtu.be/0AC54eaT4fE"></iframe>
+
+        </div>
         </div>
         <a href="#" class="btn">LEARN MORE</a>
       </div>
