update the homepage content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <li class="icons">
                 <a href="#"><i class="far fa-user"></i> Login</a>
               </li>
-              <li class="icons"><a href="#">Register</a></li>
+              <!-- <li class="icons"><a href="#">Register</a></li> -->
             </ul>
           </div>
         </div>
@@ -288,13 +288,12 @@
       <div class="store">
         <div class="storeoverlay">
           <div class="text res-pad">
-            <h1>SHOP ON MAYA ORGANICS STORE</h1>
+            <h1>Shop on Eres Bella Organics Store</h1>
             <p>
-              Purchase organic products from different categories such as
-              Skincare, Hair Care, Soap, Fitness and Female Healthcare
-              formulated by Maya Organics
+              Purchase natural skincare products that encourage people to feel
+              more confident and beautiful in their skin tone.
             </p>
-            <a href="#">Start shopping</a>
+            <a href="#">Shop Now</a>
           </div>
         </div>
       </div>
@@ -304,14 +303,10 @@
         <div class="footer-about">
           <h4>ABOUT</h4>
           <p>
-            We are Maya Organics!!! Our school consists of professionals and top
-            notch instructors who are cosmetic formulators, chemists, business
-            development experts, digital branding and online marketing experts.
-          </p>
-          <p>
-            We are committed to helping you create high-quality, effective and
-            customer-centric organic products that will set you apart in the
-            organic skincare industry.
+            Skin Essence school consists of certified tutors, well trained
+            instructors and experts in the field of organic skincare
+            formulation, chemistry, business development, digital branding and
+            online marketing.
           </p>
         </div>
         <div class="footer-courses">
@@ -332,14 +327,14 @@
             >
           </p>
         </div>
-        <div class="footer-links">
+        <!-- <div class="footer-links">
           <h4>QUICK LINKS</h4>
           <p><a href="course.html">ALL COURSES</a></p>
           <p><a href="about.html">ABOUT US</a></p>
           <p><a href="faq.html">FAQs</a></p>
           <p><a href="contact.html">CONTACT US</a></p>
           <p><a href="#">OUR BLOG</a></p>
-        </div>
+        </div> -->
         <div class="contact-address">
           <h4>CONTACT</h4>
           <p>
