reduced width and added box shadow

--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
           </div>
         </div>
       </header>
-
       <div class="welcome res-pad">
         <h2>Welcome to Skin Essence School!</h2>
 
@@ -158,7 +157,7 @@
           </p>
         </div>
         <div class="welcomevideo">
-          <iframe width="420" height="345" src="https://youtu.be/0AC54eaT4fE"></iframe>
+          <iframe width="420" height="345" src="https://www.youtube.com/watch?v=0AC54eaT4fE&feature=youtu.be"></iframe>
 
         </div>
         </div>
