--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </p>
         </div>
         <div class="welcomevideo">
-          <iframe width="420" height="345" src="https://www.youtube.com/watch?v=0AC54eaT4fE&feature=youtu.be"></iframe>
+          <iframe width="420" height="345" src="https://www.youtube.com/embed/0AC54eaT4fE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </div>
         </div>
