--- a/certinhair.html
+++ b/certinhair.html
@@ -119,13 +119,13 @@
   
           </div>
     </header>
-    <div class="cert-title">
+    <div class="cert-title res-pad">
       <h1>Certificate in formulating hair serum
       </h1>
       <p><a href="index.html">Home > </a><a href="course.html">Courses > </a><a href="certinhair.html"> certificate in formulating hair serum</a></p>
 
     </div>
-    <div class="theCourse">
+    <div class="theCourse res-pad">
       <div class="courseimg"><img src="img/course-2.jpg">
       </div>
       <div>
@@ -153,7 +153,7 @@
       </ul>
     </div>
     </div>
-    <div class="othercoursepointer">
+    <div class="othercoursepointer res-pad">
       <div>
         <a href="certinskin.html"><i class="fa fa-arrow-circle-left"></i>Certificate in organic skincare</a>
       </div>
