--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                   ><i class="fab fa-facebook"></i
                 ></a>
               </li>
-              <li class="icons">
+              <!-- <li class="icons">
                 <a href="#"><i class="far fa-user"></i> Login</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -265,7 +265,6 @@
             <div class="card nuCard">
               <div class="quotesContent">
               <i class="fas fa-quote-left"></i>
-              
                 </p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                   Corrupti, atque cum? Quis eaque nulla vitae praesentium itaque voluptatem 
                   tempore magnam dolorum beatae, optio consequuntur labore minus. Vero accusantium consectetur quasi!</p>
@@ -282,6 +281,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="section bg-lemon cta res-pad">
+        <h2 class="title">LEARN FROM AFRICA’S PREMIER NATURAL SKINCARE SCHOOL</h2>
+        <a href="#" class="btn">ENROLL NOW</a>
       </div>
     </main>
     <footer>
