--- a/index.html
+++ b/index.html
@@ -299,19 +299,13 @@
         <div class="footer-courses">
           <h4>POPULAR COURSES</h4>
           <p>
-            <img src="./img/course-1.jpg" /><a href="#">
-              Certificate in formulating organic..</a
-            >
+            <a href="#">Certificate in formulating organic..</a>
           </p>
           <p>
-            <img src="./img/course-2.jpg" /><a href="#">
-              Certificate organic hair care pro..</a
-            >
+           <a href="#">Certificate organic hair care pro..</a>
           </p>
           <p>
-            <img src="./img/course-3.jpg" /><a href="#">
-              Beginners soap making course</a
-            >
+            <a href="#">Beginners soap making course</a>
           </p>
         </div>
         <div class="contact-address">
