remove comments and link the course to single-course

--- a/index.html
+++ b/index.html
@@ -154,7 +154,6 @@
 
         </div>
         </div>
-        <!--a href="#" class="btn">LEARN MORE</a-->
       </div>
       <div class="section why res-pad">
         <h2 class="title">Why choose Skin Essence School?</h2>
@@ -205,7 +204,7 @@
             <div class="course-info">
               <h4 class="course-title">Certificate in formulating Organic Skincare Products</h4>
               <div class="more-info">
-                <a href ="./certinskin.html">View Course</a>
+                <a href ="./single-course.html">View Course</a>
               </div>
             </div>
           </div>
@@ -299,7 +298,7 @@
         <div class="footer-courses">
           <h4>POPULAR COURSES</h4>
           <p>
-            <a href="#">Certificate in formulating organic..</a>
+            <a href="/single-course.html">Certificate in formulating organic..</a>
           </p>
           <p>
            <a href="#">Certificate organic hair care pro..</a>
