--- a/faq.html
+++ b/faq.html
@@ -53,7 +53,7 @@
           <nav class="mobile-web-nav">
             <div class="logoandtoggle">
               <div class="logo">
-                <img src="./img/logo-1-1.png" />
+                <img src="./img/logo.png" />
               </div>
               <!---desktop menu-->
               <div class="desktopmenu">
