change font used

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;600;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon.png" />
   </head>
   <body>
