update the course title section

--- a/single-course.html
+++ b/single-course.html
@@ -26,7 +26,6 @@
       <div class="top-header">
         <div class="contact-info">
           <span>+234 812 844 8323</span>
-          <span class="top-address"> 1a, Harvey Road, off Herbert Macaulay Way, Behind Domino's Pizza, Yaba, Lagos, Nigeria.</span>
         </div>
         <div>
           <ul class="social-icons">
@@ -43,10 +42,6 @@
                 ><i class="fab fa-facebook"></i
               ></a>
             </li>
-            <li class="icons">
-              <a href="#"><i class="far fa-user"></i> Login</a>
-            </li>
-            <li class="icons"><a href="#">Register</a></li>
           </ul>
         </div>
       </div>
@@ -112,16 +107,19 @@
             <div class="course-title-action">
                 <h1>Certificate in formulating hair serum</h1>
                 <div class="action">
-                    <span>12,500</span>
+                    <span>N 12,500</span>
                     <a href="#" class="btn">Start Course</a>
                 </div>
             </div>
-            <div class="courseimg"><img src="img/course-2.jpg">
+            <div class="courseimg"><img src="img/course-2.jpg"></div>
         </div>
     </div>
     <div class="theCourse res-pad">
+        <div class="row">
+            <div class="col">
 
-      </div>
+            </div>
+        </div>
       <div>
       <p class="flexible"><span>All our courses are flexible and come with our unique support system.</span>
 
@@ -143,7 +141,6 @@
         <li>Weekly skincare challenge in our student community.</li>
         <li>Easy to use online classroom-track your study progress</li>
         <li>End of course certificate.</li>
-        
       </ul>
     </div>
     </div>
