--- a/faq.html
+++ b/faq.html
@@ -182,13 +182,14 @@
               </div>
             </div>
             <div class="tab">
-              <input class="accordion-input" type="radio" id="rd" name="rd">
+              <input class="accordion-input" type="radio" id="rd10" name="rd">
               <label for="rd3" class="tab-close">Close others &times;</label>
             </div>
           </div>
         </div>
       </div>
       <hr />
+
       <div class="section courses res-pad">
         <h2>Our Courses</h2>
         <div class="row">
