change courseSection background

--- a/course.html
+++ b/course.html
@@ -125,8 +125,8 @@
             <p>We have over 30 videos, 40 study books, World-class tutor support system, Live chat and Course Grading System, to help you learn better and faster. All our courses are flexible and tailored to suit your schedule, you can take our courses anwhere, anytime, on any device.</p>
 
         </div>
-        <div class="section courses res-pad">
-          <h2>Our Courses</h2>
+        <div class="section courses coursepage-courses res-pad">
+          
           <div class="row">
             <div class="card course-card nuCourseCard">
               <div class="course-img">
