update single course page view

--- a/single-course.html
+++ b/single-course.html
@@ -101,7 +101,7 @@
             <p><a href="index.html">Home > </a><a href="course.html">Courses > </a><a href="certinhair.html"> certificate in formulating hair serum</a></p>  
         </div>
     </header>
-    <div class="course-info res-pad">
+    <div class="inner course-info res-pad">
         <div class="row">
             <div class="course-title-action">
                 <h1>Certificate in formulating hair serum</h1>
@@ -113,43 +113,47 @@
             <div class="courseimg"><img src="img/course-2.jpg"></div>
         </div>
     </div>
+    
     <div class="theCourse res-pad">
         <div class="row">
+            <div class="col col-content">
+                <p class="flexible">
+                    <span>All our courses are flexible and come with our unique support system.</span>
+                    </p>
+                <h4>FLEXIBILE</h4>
+                <p>Our courses are flexible; perfect around your busy schedules, all our learning resources caters for different learning styles that suit your timing.</p>
+                <h4>
+                    UNIQUE SUPPORT SYSTEM
+                </h4>
+                <p>We help our students create Unique, Ecofriendly Luxurious Products that are effective and loved by their customers. We teach our students how to formulate with wide range of natural herbs and botanical oils. We give detailed contact of suppliers of raw materials available in Africa and Across the Globe.</p>
+                <h4>HIGHLIGHTS OF THE ONLINE CLASS</h4>
+                <ul>
+                    <li>Study from anywhere in the world at your own pace.</li>
+                    <li>Practical demonstration videos that shows you exactly how to make each products.Practical demonstration videos that shows you exactly how to make each products.</li>
+                    <li>Beautiful recipe files for each module with step –by –step instructions and gorgeous photographs.
+                    Quick reference products charts.</li>
+                    <li>Over 150 wonderful natural beauty recipes with guidelines on how to personalize your own products.</li>
+                    <li>With student support system from maya tutor and live chat.</li>
+                    <li>Weekly skincare challenge in our student community.</li>
+                    <li>Easy to use online classroom-track your study progress</li>
+                    <li>End of course certificate.</li>
+                </ul>
+            </div>
             <div class="col">
-
+                <h4>HIGHLIGHTS OF THE ONLINE CLASS</h4>
+                <ol>
+                    <li>Study from anywhere in the world at your own pace.</li>
+                    <li>Practical demonstration videos that shows you exactly how to make each products.Practical demonstration videos that shows you exactly how to make each products.</li>
+                    <li>Beautiful recipe files for each module with step –by –step instructions and gorgeous photographs.
+                    Quick reference products charts.</li>
+                    <li>Over 150 wonderful natural beauty recipes with guidelines on how to personalize your own products.</li>
+                    <li>With student support system from maya tutor and live chat.</li>
+                    <li>Weekly skincare challenge in our student community.</li>
+                    <li>Easy to use online classroom-track your study progress</li>
+                    <li>End of course certificate.</li>
+                </ol>
             </div>
         </div>
-      <div>
-      <p class="flexible"><span>All our courses are flexible and come with our unique support system.</span>
-
-      </p>
-      <h4>FLEXIBILE</h4>
-      <p>Our courses are flexible; perfect around your busy schedules, all our learning resources caters for different learning styles that suit your timing.</p>
-      <h4>
-        UNIQUE SUPPORT SYSTEM
-      </h4>
-      <p>We help our students create Unique, Ecofriendly Luxurious Products that are effective and loved by their customers. We teach our students how to formulate with wide range of natural herbs and botanical oils. We give detailed contact of suppliers of raw materials available in Africa and Across the Globe.</p>
-      <h4>HIGHLIGHTS OF THE ONLINE CLASS</h4>
-      <ul>
-        <li>Study from anywhere in the world at your own pace.</li>
-        <li>Practical demonstration videos that shows you exactly how to make each products.Practical demonstration videos that shows you exactly how to make each products.</li>
-        <li>Beautiful recipe files for each module with step –by –step instructions and gorgeous photographs.
-          Quick reference products charts.</li>
-        <li>Over 150 wonderful natural beauty recipes with guidelines on how to personalize your own products.</li>
-        <li>With student support system from maya tutor and live chat.</li>
-        <li>Weekly skincare challenge in our student community.</li>
-        <li>Easy to use online classroom-track your study progress</li>
-        <li>End of course certificate.</li>
-      </ul>
-    </div>
-    </div>
-    <div class="othercoursepointer res-pad">
-      <div>
-        <a href="certinskin.html"><i class="fa fa-arrow-circle-left"></i>Certificate in organic skincare</a>
-      </div>
-      <div>
-        <a href="beginner.html"></i>Beginners in soap making <i class="fa fa-arrow-circle-right"></i></a>
-      </div>
     </div>
   </main>
   <div class="footer-container res-pad">
